--- a/en-vivo/vtv-plus-uruguay/index.html
+++ b/en-vivo/vtv-plus-uruguay/index.html
@@ -6,18 +6,20 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Ver Canal VTV Plus Uruguay en VIVO Online por Internet en DIRECTO. Futbol Libre TV Television gratis por internet">
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/vtv-plus-uruguay/" />
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Fútbol Libre TV. Click para ver VTV Plus Uruguay en VIVO ONLINE por Internet en DIRECTO" />
 <meta property="og:description" content="Fútbol Libre TV. Ver canal VTV Plus Uruguay en VIVO y en directo ONLINE gratis por Internet" />
-<meta property="og:url" content="httsp://librefutboltv.com/en-vivo/vtv-plus-uruguay/" />
+<meta property="og:url" content="httsp://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/VTV_Plus2.png" />
+	<link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+<meta property="og:image" content="https://https://futbollibretv.net/img/VTV_Plus2.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fútbol Libre TV Ver Canal VTV Plus Uruguay en VIVO ONLINE por Internet en DIRECTO. Mirar Futbol argentino en vivo" />
 <meta name="twitter:title" content="Fútbol Libre TV Ver Canal VTV Plus Uruguay en VIVO ONLINE en DIRECTO por Internet" />
-<meta name="twitter:image" content="https://librefutboltv.com/img/VTV_Plus2.png" />
+<meta name="twitter:image" content="https://https://futbollibretv.net/img/VTV_Plus2.png" />
 	
 <title>Ver Canal VTV Plus Uruguay online en VIVO y en directo. Futbol Libre TV</title>
 	
@@ -52,15 +54,42 @@
 </head>
 <body>
 
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://librefutboltv.com">
-Fútbol Libre TV
-</a>
-
-<a class="btn btn-outline-fl" rel="home" href="https://librefutboltv.com">
-<img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV Online en VIVO y en directo" width="25" height="25">
-</a>
-</div>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -84,7 +113,7 @@ Fútbol Libre TV
 </div>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
-<center><img align="text-center" src="https://librefutboltv.com/img/logo-canal/VTV_Plus2.png" alt="Logo del canal VTV Plus Uruguay" title="VTV Plus Uruguay en vivo y en directo" width="%50" height="140" /></center><br /><br />
+<center><img align="text-center" src="https://https://futbollibretv.net/img/logo-canal/VTV_Plus2.png" alt="Logo del canal VTV Plus Uruguay" title="VTV Plus Uruguay en vivo y en directo" width="%50" height="140" /></center><br /><br />
 	
 	
 	<ul>
@@ -109,16 +138,16 @@ Fútbol Libre TV
 <p align="left">
 	
 	
-	Para poder ver y sintonizar el canal de uruguay <strong><a href="https://librefutboltv.com/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> gratis en vivo y en directo debe ir al home de <a href="https://librefutboltv.com/"><strong>Futbol Libre TV</strong></a> a la hora que se esten disputando los partidos de la <strong>Liga Uruguaya</strong> y buscar el logo de este canal o la agenda con los horarios, para luego avanzar al canal donde deberá click en Play en el reproductor debajo de "<strong>Canal VTV Plus Uruguay Online en VIVO y en directo</strong>". Está tambien la opcion para ver <strong><a href="https://librefutboltv.com/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> en directo online por la pagina oficial de vtv.com.uy desde cualquier <strong>computadora/ordenador</strong> y <strong>celular</strong>. </div> </p>
+	Para poder ver y sintonizar el canal de uruguay <strong><a href="https://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> gratis en vivo y en directo debe ir al home de <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> a la hora que se esten disputando los partidos de la <strong>Liga Uruguaya</strong> y buscar el logo de este canal o la agenda con los horarios, para luego avanzar al canal donde deberá click en Play en el reproductor debajo de "<strong>Canal VTV Plus Uruguay Online en VIVO y en directo</strong>". Está tambien la opcion para ver <strong><a href="https://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> en directo online por la pagina oficial de vtv.com.uy desde cualquier <strong>computadora/ordenador</strong> y <strong>celular</strong>. </div> </p>
 	
 	
 <div id="item3"><h2>Programación de VTV Plus Uruguay en vivo y en directo las 24 horas</h2>
-<p align="left"> La programación del canal <strong><a href="https://librefutboltv.com/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> se puede ver gratis todos los partidos de la <strong>Liga de Futból de Uruguay</strong>, incluidos los juegos de <strong>Peñarol</strong>, <strong>Nacional</strong>, Montevideo Wanderers y la <strong>selección Uruguaya</strong>. Tambien en la programación estan incluidos los programas de Pasión Noticias, Pasión Fútbol, Pasión de Carnaval y los partidos de la segunda división de Uruguay.	</p> </div>
+<p align="left"> La programación del canal <strong><a href="https://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> se puede ver gratis todos los partidos de la <strong>Liga de Futból de Uruguay</strong>, incluidos los juegos de <strong>Peñarol</strong>, <strong>Nacional</strong>, Montevideo Wanderers y la <strong>selección Uruguaya</strong>. Tambien en la programación estan incluidos los programas de Pasión Noticias, Pasión Fútbol, Pasión de Carnaval y los partidos de la segunda división de Uruguay.	</p> </div>
 	
 	
 	
 	<div id="item4"><h2>¿Cómo ver los partidos de fútbol en directo por VTV Plus Uruguay?</h2>
-<p align="left">Para poder ver los partidos en vivo del Campeonato Uruguayo de Primera División deberá sintonizar algunos de los canales encargados de transmitir los partidos y los cuales son: <strong><a href="https://librefutboltv.com/star-plus/" title="Ver Star Plus en vivo y en directo">Star Plus</a></strong>, <strong><a href="https://librefutboltv.com/en-vivo/gol-tv/" title="Ver Canal Goltv en vivo y en directo">GOLTV</a></strong> y <strong><a href="https://librefutboltv.com/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong>.
+<p align="left">Para poder ver los partidos en vivo del Campeonato Uruguayo de Primera División deberá sintonizar algunos de los canales encargados de transmitir los partidos y los cuales son: <strong><a href="https://https://futbollibretv.net/star-plus/" title="Ver Star Plus en vivo y en directo">Star Plus</a></strong>, <strong><a href="https://https://futbollibretv.net/en-vivo/gol-tv/" title="Ver Canal Goltv en vivo y en directo">GOLTV</a></strong> y <strong><a href="https://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong>.
 	
 	</p> </div>
 	
@@ -146,7 +175,7 @@ Fútbol Libre TV
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 
                               </script>
