--- a/html/footer.html
+++ b/html/footer.html
@@ -4,18 +4,17 @@
 <div class="col-6 col-md">
 <h5>Social</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://twitter.com/LibreFutbolTV1" target="_blank">Twitter</a></li>
-<li><a class="text-muted" href="https://www.instagram.com/librefutbolweb/" target="_blank">Instagram</a></li>
-<li><a class="text-muted" href="https://www.youtube.com/channel/UCNdS4deWHyFLqB8o49wqo7A" target="_blank">YouTube</a></li>
+<li><a class="text-muted" href="https://twitter.com/" target="_blank">Twitter</a></li>
+
 </ul>
 </div>
 <div class="col-6 col-md">
-<h5>FÃºtbol Libre</h5>
+<h5>Futbol Libre</h5>
 <ul class="list-unstyled text-small">
 <li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br/>
 <div style="text-align:center;">
-<small class="d-block mb-3 text-muted">FÃºtbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
+<small class="d-block mb-3 text-muted">Futbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
 </ul>
 </div>
 </div>
