--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="canonical" href="https://futbollibretv.net/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
-	
+	<script type="text/javascript" src="/z-7228718"></script>
 <meta name="description" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC.">
 <meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
 <meta property="og:locale" content="es_AR" />
