--- a/en-vivo/espn-premium/index.html
+++ b/en-vivo/espn-premium/index.html
@@ -7,18 +7,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Ver canal ESPN Premium en VIVO Online por Internet en DIRECTO. Futbol Libre TV Television gratis por internet">
 <meta name="author" content="Fútbol Libre">
-<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/espn-premium/" />
+<link rel="canonical" href="https://futbollibretv.net/en-vivo/espn-premium/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Fútbol Libre TV. Click para ver ESPN Premium en VIVO ONLINE por Internet en DIRECTO" />
 <meta property="og:description" content="Fútbol Libre TV. Ver canal ESPN Premium en VIVO y en directo ONLINE gratis por Internet" />
 <meta property="og:url" content="https://https://futbollibretv.net/en-vivo/espn-premium/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://https://futbollibretv.net/img/ESPN_Premium.png" />
+<meta property="og:image" content="https://futbollibretv.net/img/ESPN_Premium.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fútbol Libre TV Ver ESPN Premium en VIVO ONLINE por Internet en DIRECTO. Mirar Futbol argentino en vivo" />
 <meta name="twitter:title" content="Fútbol Libre TV Ver ESPN Premium en VIVO ONLINE en DIRECTO por Internet" />
-<meta name="twitter:image" content="https://https://futbollibretv.net/img/ESPN_Premium.png" />
+<meta name="twitter:image" content="https://futbollibretv.net/img/ESPN_Premium.png" />
 <title>Ver Canal ESPN Premium online en VIVO y en directo. Futbol Libre TV</title>
 <link href="../css/styles.css" rel="stylesheet">
   	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -131,7 +131,7 @@
 <p align="left">
 	
 	
-	Para ver el canal de <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/" title="Ver ESPN Premium online en vivo y en directo por internet gratis">ESPN Premium</a></strong> gratis en vivo y en directo debe ingresar a <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> a la hora que este jugando un partido del <strong>fútbol argentino</strong> y luego hacer click en logo del canal para luego en la siguiente pagina darle click en Play en el reproductor que se encuentra arriba del logo y abajo del titulo "<strong>Canal ESPN Premium Online en VIVO y en directo</strong>". En el mismo se encuentran varias opciones para elegir el canal a ver en vivo. También podrá ver <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/" title="Ver ESPN Premium online en vivo y en directo por internet gratis">ESPN Premium</a></strong> en vivo por la pagina oficial de EspnPlay.com para ver desde la <strong>computadora/ordenador</strong>, <strong>celular</strong> o <strong>Chromecast</strong>. </div> </p>
+	Para ver el canal de <strong><a href="https://futbollibretv.net/en-vivo/espn-premium/" title="Ver ESPN Premium online en vivo y en directo por internet gratis">ESPN Premium</a></strong> gratis en vivo y en directo debe ingresar a <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> a la hora que este jugando un partido del <strong>fútbol argentino</strong> y luego hacer click en logo del canal para luego en la siguiente pagina darle click en Play en el reproductor que se encuentra arriba del logo y abajo del titulo "<strong>Canal ESPN Premium Online en VIVO y en directo</strong>". En el mismo se encuentran varias opciones para elegir el canal a ver en vivo. También podrá ver <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/" title="Ver ESPN Premium online en vivo y en directo por internet gratis">ESPN Premium</a></strong> en vivo por la pagina oficial de EspnPlay.com para ver desde la <strong>computadora/ordenador</strong>, <strong>celular</strong> o <strong>Chromecast</strong>. </div> </p>
 	
 	
 <div id="item3"><h2>Programación de ESPN Premium en vivo y en directo las 24 horas</h2>
