--- a/en-vivo/espn-3/index.html
+++ b/en-vivo/espn-3/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="ESPN 3 en VIVO es un canal deportivo creado en el año 2002 y que comenzó a emitirse en Argentina, Bolivia, Chile, Paraguay y Uruguay, despues en Perú. Su programación es integramente deportivo, fundamentalmente sobre fútbol, tenis entre otras disciplinas. Asimismo, emiten programas sobre los campeonatos de diferentes deportes de Argentina.">
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://https://futbollibretv.net/espn-3/" />
+<link rel="canonical" href="https://futbollibretv.net/espn-3/" />
 <link rel="publisher" href="https://plus.google.com/110597823755835387054" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
@@ -114,7 +114,7 @@
 <p align="left"><strong>ESPN 3 en vivo</strong> es una señal multiplataforma de la cadena ESPN, que comenzó a emitir el 14 de noviembre de 2011 para toda América Latina. Está dedicado a un público más joven, su perfil es de hombres entre 16 y 24 años de edad, con nivel económico alto. <strong>ESPN3</strong> es el primer canal deportivo en <strong>Latinoamérica</strong> que tiene la disponibilidad de verse en forma simultánea en diferentes plataformas, es decir, tanto en televisión, celulares, computadores y tabletas digitales.</p>
 <p align="left">La <strong>programación</strong> de ESPN 3 está dedicada a los deportes de acción, es decir los deportes extremos tanto de verano como de invierno, así como los de aventura, surf y running. Desde su lanzamiento, se ofrece en definición estándar y alta definición. Es un servicio de <strong>streaming</strong> de programas deportivos de la cadena ESPN para clientes de Estados Unidos. La red está disponible para personas que reciben conexión a Internet de alta velocidad o suscripción de televisión por cable.</p>
 <p align="left">ESPN 3 señal en vivo tambien transmite otros torneos el fútbol americano universitario, baloncesto universitario de la NCAA, la NBA, Copas Mundiales de la FIFA, clasificación al mundial, la Premier League, la Serie A de Italia, la Liga de España y otras grandes ligas del fútbol internacional, los cuatro “Grand Slam” eventos de tenis, campeonatos de golf, el rugby mundial.</p>
-<p align="center"><img src="https://https://futbollibretv.net/img/ESPN_3.png" alt="logo del canal ESPN 3" title="ESPN 3 en vivo" width="%50" height="140" /></p>
+<p align="center"><img src="https://futbollibretv.net/img/ESPN_3.png" alt="logo del canal ESPN 3" title="ESPN 3 en vivo" width="%50" height="140" /></p>
 <div id="footer"></div>
 <script>
 $(document).ready(function() {
