--- a/en-vivo/espn-2/index.html
+++ b/en-vivo/espn-2/index.html
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="ESPN 2 en VIVO, ver el canal que transmite la Copa Sudamericana y muchos otros contenidos deportivos. Transmisión gratuita por Internet.">
     <meta name="robots" content="noodp" />
-    <link rel="canonical" href="https://librefutboltv.com/en-vivo/espn-2/" />
+    <link rel="canonical" href="https://futbollibretv.net/en-vivo/espn-2/" />
     <meta property="og:locale" content="es_ES" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Click para ESPN 2 en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
     <meta property="og:description" content="ESPN 2 en VIVO, ver el canal que transmite la Copa Sudamericana y muchos otros contenidos deportivos. Transmisión gratuita por Internet." />
-    <meta property="og:url" content="https://librefutboltv.com/en-vivo/espn-2/" />
+    <meta property="og:url" content="https://futbollibretv.net/en-vivo/espn-2/" />
     <meta property="og:site_name" content="Fútbol Libre TV" />
-    <meta property="og:image" content="http://librefutboltv.com/img/ESPN_2.png" />
+    <meta property="og:image" content="http://futbollibretv.net/img/ESPN_2.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Ver ESPN 2 en VIVO ONLINE por Internet en DIRECTO. Canal acceso instantáneo a los mejores partidos de futbol y el mejor deporte. Mirar Ya" />
     <meta name="twitter:title" content="Ver ESPN 2 en VIVO ONLINE en DIRECTO por Internet" />
-    <meta name="twitter:image" content="https://librefutboltv.com/img/ESPN_2.png" />
+    <meta name="twitter:image" content="https://futbollibretv.net/img/ESPN_2.png" />
     <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../../favicon/apple-icon-72x72.png">
@@ -117,7 +117,7 @@
 <p align="left">
 Fue utilizado para algunas retransmisiones deportivas experimentales. El 18 de septiembre de 1994, ESPN transmitía la Champ Car World Series, y canal <strong>ESPN2</strong> incluía transmisiones destacadas y presentó varios programas de noticias de media hora que se centró en deportes específicos, tales como fútbol americano, hockey y automovilismo. Está enfocada en mayor medida hacia el fútbol y el béisbol, debido a que son los deportes favoritos de los países a los que llega esta señal; sin embargo, esta señal también cubre otros deportes.
 </p>
-<p align="center"><img src="https://librefutboltv.com/img/ESPN_2.png" alt="logo del canal ESPN 2" title="ESPN 2 en vivo" width="%50" height="140" /></p>
+<p align="center"><img src="https://futbollibretv.net/img/ESPN_2.png" alt="logo del canal ESPN 2" title="ESPN 2 en vivo" width="%50" height="140" /></p>
 <div id="footer"></div>
 <script>
 $(document).ready(function() {
