--- a/en-vivo/espn-3/index.html
+++ b/en-vivo/espn-3/index.html
@@ -7,13 +7,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="ESPN 3 en VIVO es un canal deportivo creado en el año 2002 y que comenzó a emitirse en Argentina, Bolivia, Chile, Paraguay y Uruguay, despues en Perú. Su programación es integramente deportivo, fundamentalmente sobre fútbol, tenis entre otras disciplinas. Asimismo, emiten programas sobre los campeonatos de diferentes deportes de Argentina.">
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://futbollibretv.net/espn-3/" />
+<link rel="canonical" href="https://futbollibretv.net/en-vivo/espn-3/" />
 <link rel="publisher" href="https://plus.google.com/110597823755835387054" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para ESPN 3 en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="ESPN  en VIVO es un canal deportivo creado en el año 2002 y que comenzó a emitirse en Argentina, Bolivia, Chile, Paraguay y Uruguay, despues en Perú. Su programación es integramente deportivo, fundamentalmente sobre fútbol, tenis entre otras disciplinas. Asimismo, emiten programas sobre los campeonatos de diferentes deportes de Argentina." />
-<meta property="og:url" content="http://https://futbollibretv.net/espn-3/" />
+<meta property="og:url" content="http://https://futbollibretv.net/en-vivo/espn-3/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
 <meta property="article:publisher" content="https://www.facebook.com/FutbolLibre/" />
 <meta property="og:image" content="http://https://futbollibretv.net/img/ESPN_3.png" />
