--- a/en-vivo/fox-sports-2/index.html
+++ b/en-vivo/fox-sports-2/index.html
@@ -11,14 +11,14 @@
 <meta name="robots" content="noodp" />
    <link href="../css/styles.css" rel="stylesheet">
   	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/fox-sports-2/" />
+<link rel="canonical" href="https://futbollibretv.net/en-vivo/fox-sports-2/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para ver Fox Sports 2 en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="Fox Sports 2 en VIVO es un canal de cable y satélite totalmente deportivo, es la segunda señal de Fox Sports, antes llamado Fox Sports + a partir del 5 de Noviembre del 2012 se le cambio de nombre para llamarse Fox Sports 2 esta cadena transmite eventos deportivos locales e internacionales más destacados como la Copa Libertadores, UEFA Champions League, Copa Sudamericana, UEFA Europa League, la WWE entre otros." />
-<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/fox-sports-2/" />
+<meta property="og:url" content="https://futbollibretv.net/en-vivo/fox-sports-2/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://https://futbollibretv.net/img/logo-canal/Fox_Sports_2.webp" />
+<meta property="og:image" content="https://futbollibretv.net/img/logo-canal/Fox_Sports_2.webp" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fox Sports 2 en VIVO es un canal de cable y satélite totalmente deportivo, es la segunda señal de Fox Sports, antes llamado Fox Sports + a partir del 5 de Noviembre del 2012 se le cambio de nombre para llamarse Fox Sports 2 esta cadena transmite eventos deportivos locales e internacionales más destacados como la Copa Libertadores, UEFA Champions League, Copa Sudamericana, UEFA Europa League, la WWE entre otros." />
 <meta name="twitter:title" content="Ver Fox Sports 2 en VIVO ONLINE en DIRECTO por Internet" />
@@ -142,7 +142,7 @@
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
