--- a/en-vivo/fox-sports-3/index.html
+++ b/en-vivo/fox-sports-3/index.html
@@ -11,13 +11,13 @@
 <meta name="robots" content="noodp" />
             <link href="../css/styles.css" rel="stylesheet">
   	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/fox-sports-3/" />
+<link rel="canonical" href="https://futbollibretv.net/en-vivo/fox-sports-3/" />
 <link rel="publisher" href="https://plus.google.com/110597823755835387054" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para ver Fox Sports 3 en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="Fox Sports 3 en VIVO es un canal deportivo de televisión de pago operado por Fox International Channels y que inició transmisiones el 5 de noviembre de 2012 para América Latina (excepto Brasil). Fox Sports 3 reemplazó al canal Speed en su versión para Latinoamérica" />
-<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/fox-sports-3/" />
+<meta property="og:url" content="https://futbollibretv.net/en-vivo/fox-sports-3/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
 <meta property="og:image" content="//https://futbollibretv.net/img/Fox_Sports_3.png" />
 <meta name="twitter:card" content="summary_large_image" />
