--- a/en-vivo/tnt-sports-online/index.html
+++ b/en-vivo/tnt-sports-online/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Ver Canal TNT Sports Premium online en vivo y en directo. Futbol Libre TV Television gratis por internet">
 <meta name="author" content="Fútbol Libre">
-<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/tnt-sports/" />
+<link rel="canonical" href="https://futbollibretv.net/en-vivo/tnt-sports/" />
 <link rel="publisher" href="https://plus.google.com/110597823755835387054" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
@@ -110,7 +110,7 @@
 </div>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
-<div><center><img src="https://https://futbollibretv.net/img/TNT_Sports.png" alt="logo del canal TNT Sports" title="TNT Sports Premium en vivo" width="%50" height="140" /></center>
+<div><center><img src="https://futbollibretv.net/img/TNT_Sports.png" alt="logo del canal TNT Sports" title="TNT Sports Premium en vivo" width="%50" height="140" /></center>
 	
 	
 	<ul>
@@ -125,13 +125,13 @@
 	
 			
 	<div id="item1"><h2>¿Qué es el canal de TNT Sports Premium en vivo?</h2>
-<p align="left"> Ver canal <strong>TNT Sports Premium</strong> online en vivo y en directo. <strong>TNT Sports Premium</strong> es un canal de televisión de Argentina encargado en transmitir los partidos de Primera división del futbol argentino (<strong>Superliga Argentina</strong>) junto a el canal <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong>.
+<p align="left"> Ver canal <strong>TNT Sports Premium</strong> online en vivo y en directo. <strong>TNT Sports Premium</strong> es un canal de televisión de Argentina encargado en transmitir los partidos de Primera división del futbol argentino (<strong>Superliga Argentina</strong>) junto a el canal <strong><a href="https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong>.
 		
 		</p> </div>
 	
 	
 <div id="item2"><h2>¿Cómo puedo ver el canal TNT Sports Premium online en vivo y en directo?</h2>
-<p align="left">Para ver todos los partidos que transmite <strong>TNT Sports Premium</strong> se debe ingresar a la pagina <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> a la hora que se este jugando un partido de la <strong>Liga Profesional Argentina de Fútbol</strong> y luego hacer click en el logo del canal o en el boton "Ver Canal". Luego al ingresar al canal que desea ver debe hacer click en el Play del reproductor que esta debajo del titulo "<strong>Canal TNT Sports Premium Online en VIVO y en directo</strong>". Tambien se puede ver TNT Sports Premium en vivo y en directo en la pagina oficial tntsports.com.ar para ver desde la computadora/ordenador o desde el <strong>celular</strong> tanto si es Android o Iphone iOS. También se puede ver online en vivo y en directo desde la television conectadose directamente con el <strong>Chromecast</strong>. </div>
+<p align="left">Para ver todos los partidos que transmite <strong>TNT Sports Premium</strong> se debe ingresar a la pagina <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> a la hora que se este jugando un partido de la <strong>Liga Profesional Argentina de Fútbol</strong> y luego hacer click en el logo del canal o en el boton "Ver Canal". Luego al ingresar al canal que desea ver debe hacer click en el Play del reproductor que esta debajo del titulo "<strong>Canal TNT Sports Premium Online en VIVO y en directo</strong>". Tambien se puede ver TNT Sports Premium en vivo y en directo en la pagina oficial tntsports.com.ar para ver desde la computadora/ordenador o desde el <strong>celular</strong> tanto si es Android o Iphone iOS. También se puede ver online en vivo y en directo desde la television conectadose directamente con el <strong>Chromecast</strong>. </div>
 
 </p>
 	
@@ -142,12 +142,12 @@
 	
 	
 	<div id="item4"><h2>¿Cómo ver partidos del fútbol argentino en vivo sin pagar?</h2>
-<p align="left">Para ver todos los partidos de fútbol del Torneo Argentino de primera división en vivo y en directo se pueden ir a algunos de los dos canales que lo transmiten que son <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> y <strong><a href="https://https://futbollibretv.net/en-vivo/tnt-sports/">TNT Sports Premium</a></strong>. Anteriormente todos estos partidos eran gratuitos y se podian ver gracias a <strong>Futbol para Todos</strong> online en vivo y en directo.
+<p align="left">Para ver todos los partidos de fútbol del Torneo Argentino de primera división en vivo y en directo se pueden ir a algunos de los dos canales que lo transmiten que son <strong><a href="https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> y <strong><a href="https://futbollibretv.net/en-vivo/tnt-sports/">TNT Sports Premium</a></strong>. Anteriormente todos estos partidos eran gratuitos y se podian ver gracias a <strong>Futbol para Todos</strong> online en vivo y en directo.
 	
 	</p> </div>
 	
 		<div id="item5"><h2>¿Qué es y como ver el Pack Fútbol en vivo y en directo?</h2>
-<p align="left"> El <strong>Pack Fútbol</strong> es un paquete que incluye los canales online <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> (antes llamado <strong>Fox Sports Premium</strong>) y <strong><a href="https://https://futbollibretv.net/en-vivo/tnt-sports/">TNT Sports Premium</a></strong> que transmite todos los partidos en vivo y en directo en calidad HD que se encuentran en Flow en los siguientes canales: Fox Sports Premium HD está en el canal 603 y TNT Sports Premium en el canal numero 604.
+<p align="left"> El <strong>Pack Fútbol</strong> es un paquete que incluye los canales online <strong><a href="https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> (antes llamado <strong>Fox Sports Premium</strong>) y <strong><a href="https://futbollibretv.net/en-vivo/tnt-sports/">TNT Sports Premium</a></strong> que transmite todos los partidos en vivo y en directo en calidad HD que se encuentran en Flow en los siguientes canales: Fox Sports Premium HD está en el canal 603 y TNT Sports Premium en el canal numero 604.
 	
 	</p> </div>
 	
