--- a/en-vivo/tudn/index.html
+++ b/en-vivo/tudn/index.html
@@ -6,16 +6,16 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="TUDN es un canal deportivo de television por suscripción mexicano-estadounisense de habla hispana, antes conocido como Univisión Deportes Network o por su abreviatura, UDN. Es propiedad de Univisión Communications, una compañía de medios que ha enfocado su contenido al mercado hispanoparlante que vive en los Estados Unidos desde su creación en 1962.">
-<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/tudn/" />
+<link rel="canonical" href="https://futbollibretv.net/en-vivo/tudn/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
   <link href="../css/styles.css" rel="stylesheet">
   	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <meta property="og:title" content="Click para TUDN en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="TUDN es un canal deportivo de television por suscripción mexicano-estadounisense de habla hispana, antes conocido como Univisión Deportes Network o por su abreviatura, UDN. Es propiedad de Univisión Communications, una compañía de medios que ha enfocado su contenido al mercado hispanoparlante que vive en los Estados Unidos desde su creación en 1962." />
-<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/tudn/" />
+<meta property="og:url" content="https://futbollibretv.net/en-vivo/tudn/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://https://futbollibretv.net/img/logo-canal/TUDN.webp" />
+<meta property="og:image" content="https://futbollibretv.net/img/logo-canal/TUDN.webp" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Ver TUDN en VIVO ONLINE en DIRECTO por Internet" />
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
@@ -99,7 +99,7 @@
 <div class="sharethis-inline-share-buttons"></div>
 
 <br />
-<img src="https://https://futbollibretv.net/img/logo-canal/TUDN.webp" alt="Logo del canal TUDN" title="TUDN en vivo"><br>
+<img src="https://futbollibretv.net/img/logo-canal/TUDN.webp" alt="Logo del canal TUDN" title="TUDN en vivo"><br>
 <p align="left"><strong>TUDN</strong> es un canal deportivo de televisión por suscripción mexicano-estadounidense de habla hispana, antes conocido como Univisión Deportes Network o por su abreviatura, UDN. Es propiedad de Univisión Communications, una compañía de medios que ha enfocado su contenido al mercado hispanoparlante que vive en los Estados Unidos desde su creación en 1962.</p>
 <br />
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
@@ -115,7 +115,7 @@
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
